# TextLinesCompareTool

./: .gitignore  Create-DevCert-HTTPS.ps1  Create-Projects.ps1  Dockerfile  Execute-DockerBuild.ps1  Execute-DockerRun-AppWeb.ps1  Execute-DockerRun.ps1  README.md  Run-AppCLI.ps1  Run-AppDemo-AgileSpam.ps1  Run-AppDemo-Comments.ps1  Run-AppDemo-LoremIpsum.ps1  Run-AppDemo-MyTests.ps1  TextLinesCompareTool.sln
.github/workflows/: dotnet.yml
Examples/agile-spam/: AGILE-FRE.txt  AGILE-HUN.txt  AGILE-ITA.txt  AGILE-RUS.txt
Examples/lorem-ipsum/: demo_1.txt  demo_4.txt  demo_5.txt
Scripts/: demo-agilespam.bash  demo-comments.bash  demo-loremipsum.bash  demo-mytests.bash
SourceCppProject/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  appdemo-agilespam.bash  appdemo-comments.bash  appdemo-loremipsum.bash  appdemo-mytests.bash  unix-app-build.bash  unix-app-run.bash  unix-app-test.bash  windows-docker-app-build.ps1  windows-docker-app-run.ps1  windows-mingw-app-build.ps1  windows-mingw-app-run.ps1  windows-mingw-app-test.ps1
SourceCppProject/examples/agile-spam/: AGILE-NLD.txt  AGILE-TUR.txt  AGILE-UKR.txt
SourceCppProject/examples/comments/: file_3.txt
SourceCppProject/examples/lorem-ipsum/: demo_3.txt  demo_6.txt
SourceCppProject/examples/my-tests/: test_1.txt  test_2.txt  test_3.txt  test_4.txt
SourceCppProject/sources/: main.cpp
SourceCppProject/sources/Models/: LineInfo.cpp  LineInfo.hpp  LineInfoTest.cpp  LinesPresentationView.cpp  LinesPresentationView.hpp  LinesRepository.cpp  LinesRepository.hpp  LinesRepositoryTest.cpp  LinesStorageMap.cpp  LinesStorageMap.hpp  LinesStorageMapTest.cpp  LinesStorageSet.cpp  LinesStorageSet.hpp  LinesStorageSetTest.cpp  SourceInfo.cpp  SourceInfo.hpp  SourcesExplorer.cpp  SourcesExplorer.hpp
SourceCppProject/sources/Parsers/: ArtifactValidator.cpp  ArtifactValidator.hpp  ArtifactValidatorTest.cpp  GeneralCharacterValidator.cpp  GeneralCharacterValidator.hpp  GeneralCharacterValidatorTest.cpp  HashGenerator.cpp  HashGenerator.hpp  HashGeneratorTest.cpp  LinesMainProcessor.cpp  LinesMainProcessor.hpp  LinesMainProcessorTest.cpp  LinesPreprocessor.cpp  LinesPreprocessor.hpp  LinesPreprocessorTest.cpp  StringsCommentsHandler.cpp  StringsCommentsHandler.hpp  StringsCommentsHandlerTest.cpp  StringsWhitespacesHandler.cpp  StringsWhitespacesHandler.hpp  StringsWhitespacesHandlerTest.cpp
SourceCppProject/sources/Printers/: AbstractOutputDevice.cpp  AbstractOutputDevice.hpp  ConsoleOutputPrinter.cpp  ConsoleOutputPrinter.hpp  FileOutputPrinter.cpp  FileOutputPrinter.hpp  WebOutputPrinter.cpp  WebOutputPrinter.hpp
SourceCppProject/sources/Services/: AppDatetimeService.cpp  AppDatetimeService.hpp  AppDatetimeServiceTest.cpp  AppIntelligentWorker.cpp  AppIntelligentWorker.hpp  AppLaunchConfiguration.cpp  AppLaunchConfiguration.hpp  AppLaunchConfigurationTest.cpp
TestDataExamples/agile-spam/: AGILE-GER.txt  AGILE-SPA.txt  AGILE-SWE.txt
TestDataExamples/comments/: file_1.txt  file_2.txt
TestDataExamples/lorem-ipsum/: demo_2.txt  demo_7.txt
TextLinesComparing.App.CLI/: OutputInfo.cs  Program.cs  TextLinesComparing.App.CLI.csproj
TextLinesComparing.App.Web/: Program.cs  TextLinesComparing.App.Web.csproj  UploadsStore.cs
TextLinesComparing.App.Web/Pages/: Index.cshtml  Index.cshtml.cs  Results.cshtml  Results.cshtml.cs  UploadedContent.cshtml  UploadedContent.cshtml.cs
TextLinesComparing.App.Web/Pages/Shared/: _Layout.cshtml
TextLinesComparing.App.Web/Properties/: launchSettings.json
TextLinesComparing.App.Web/wwwroot/: index.html  scripts.js  styles.css
TextLinesComparing.Library/: AppDatetimeService.cs  AppIntelligentWorker.cs  AppLaunchConfiguration.cs  ArtifactValidator.cs  Class1.cs  DatetimeUtilities.cs  GeneralCharacterValidator.cs  HashGenerator.cs  LineInfo.cs  LinesArtifactAnalyzer.cs  LinesMainProcessor.cs  LinesPreprocessor.cs  LinesPresentationView.cs  LinesRepository.cs  LinesStorage.cs  LinesStorageMap.cs  LinesStorageSet.cs  OutputAbstractDevice.cs  OutputConsolePrinter.cs  OutputFilePrinter.cs  OutputWebPrinter.cs  SourceInfo.cs  SourcesExplorer.cs  StringsCommentsHandler.cs  StringsWhitespacesHandler.cs
TextLinesComparing.Testing/: AppDatetimeServiceTest.cs  AppLaunchConfigurationTest.cs  ArtifactValidatorTest.cs  DatetimeUtilitiesTest.cs  GeneralCharacterValidatorTest.cs  HashGeneratorTest.cs  LineInfoTest.cs  LinesArtifactAnalyzerTest.cs  LinesMainProcessorTest.cs  LinesPreprocessorTest.cs  LinesRepositoryTest.cs  LinesStorageMapTest.cs  LinesStorageSetTest.cs  LinesStorageTest.cs  StringsCommentsHandlerTest.cs  StringsWhitespacesHandlerTest.cs  TextLinesComparing.Testing.csproj  UnitTest1.cs
